--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
+  padding-bottom: 600px;
+}
+
+h1,
+ul,
+p{
+  margin: 0;
 }
 
 ul {
-  margin: 0px;
   padding: 0px;
   list-style: none;
 }
@@ -42,6 +48,8 @@ a {
   font-size: 1.125rem;
   padding: 1rem 0;
   position: relative;
+  font-family: "Poppins";
+  font-weight: 400;
 }
 
 .header-menu a:after {
@@ -87,5 +95,116 @@ a {
   .header-menu a {
     padding: 0.5rem 0.75rem;
     font-size: 0.875rem;
+  }
+}
+
+.intro-bg{
+  background-color: #000000;
+  color: #ffffff;
+  box-shadow: inset 0 -7.5rem #ffffff;
+}
+
+.intro{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0 2.5rem;
+  color: inherit;
+  max-width: 1200px;
+  padding-left: 1.125rem;
+  padding-right: 1.125rem;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+}
+
+.intro-content{
+  align-self: end;
+  padding-bottom: 12.5rem;
+}
+
+.intro h1{
+  font-size: 4rem;
+  line-height: 1.125;
+  margin-bottom: 2rem;
+  font-family: "Poppins";
+  font-weight: 600;
+}
+
+.intro h1 span{
+  color: #FFBB00;
+}
+
+.intro p{
+  font-size: 1.5rem;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;
+  color: #B2B2B2;
+  font-family: "Roboto";
+  font-weight: 400;
+}
+
+.intro a{
+  display: inline-block;
+  color: #332200;
+  background: linear-gradient(#FFBF00, #F2A50C);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  padding: 1rem 2rem;
+  border-radius: 4px;
+  font-size: 1.125rem;
+  line-height: 1.33;
+  font-family: "Poppins";
+  font-weight: 600;
+}
+
+.intro a:hover{
+  background: linear-gradient(#ffb60d, #e59317);
+}
+
+.intro img {
+  display: block;
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media(max-width: 1200px){
+  .intro h1{
+    font-size: 3rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .intro p{
+    font-size: 1.25rem;
+  }
+}
+
+@media(max-width: 800px){
+  .intro-bg{
+    background: #111111;
+    padding-top: 40px;
+    box-shadow: inset 0 -60px #ffffff;
+  }
+  .intro{
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+  .intro h1{
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
+  }
+  .intro img{
+    height: 300px;
+    width: 100%;
+  }
+  .intro-content{
+    padding-bottom: 0;
+  }
+}
+
+@media(max-width:600px){
+  .intro a{
+    padding: 0.8rem 1.5rem;
+    font-size: 1rem;
   }
 }
