--- a/css/global/global.css
+++ b/css/global/global.css
@@ -2,9 +2,12 @@ body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
   color: #111111;
+  padding-bottom: 600px;
 }
 
 h1,
+h2,
+h3,
 ul,
 p{
   margin: 0;
@@ -17,4 +20,13 @@ ul {
 
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+img{
+  max-width: 100%;
+}
+
+img[src$="jpg"]{
+  border-radius: 4px;
 }
