--- a/css/utils/components.css
+++ b/css/utils/components.css
@@ -1,3 +1,13 @@
+
+.container{
+  max-width: 1200px;
+  padding-left: 1.125rem;
+  padding-right: 1.125rem;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+}
+
 .button{
   display: inline-block;
   color: var(--color-primary-5);
