--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,4 @@
 @import "./utils/components.css";
 @import "./home/intro.css";
 @import "./bicycles/bicycles.css";
+@import "./home/technology.css";
