--- a/css/utils/components.css
+++ b/css/utils/components.css
@@ -33,3 +33,22 @@
     font-size: 1rem;
   }
 }
+
+.link{
+  display: inline-block;
+  text-transform: uppercase;
+  color: var(--color-primary-1);
+  font: 600 1.5rem/1.5 "Poppins", sans-serif;
+}
+
+.link::after{
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: currentColor;  
+}
+
+.link:hover{
+  color: var(--color-0);
+}
