--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,12 @@
 
 /* Home */
 @import "./home/intro.css";
-@import "./bicycles/bicycles.css";
 @import "./home/technology.css";
 @import "./home/partners.css";
 @import "./home/testimony.css";
+
+/*Bicycles*/
+@import "./bicycles/bicycles.css";
+
+/*Insurance*/
+@import "./insurance/insurance.css";
