creates footer section

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import "./utils/typography.css";
 @import "./utils/colors.css";
 @import "./global/header.css";
+@import "./global/footer.css";
 
 /* Utility */
 @import "./utils/components.css";
