css refactor changing unit from px to rem

--- a/css/utils/components.css
+++ b/css/utils/components.css
@@ -67,8 +67,8 @@
 
 /*Internal Title*/
 .title-bg{
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
   background-color: var(--color-11);
 }
 
@@ -84,8 +84,8 @@
 
 @media(max-width: 800px){
   .title-bg{
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
   }
   .title p{
     font-size: 1rem;
