--- a/css/bicycles/bicycles.css
+++ b/css/bicycles/bicycles.css
@@ -1,6 +1,6 @@
 .bicycle-list{
-  padding: 60px;
-  padding-bottom: 120px;
+  padding: 3.75rem;
+  padding-bottom: 7.5rem;
 }
 
 .bicycle-list h2{
@@ -12,7 +12,7 @@
   max-width: 1400px;
   gap: 2.5rem;
   overflow-x: auto;
-  padding: 0 20px 20px 20px;
+  padding: 0 1.25rem 1.25rem 1.25rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -51,7 +51,7 @@
 }
 
 .bicycle-list li span{
-  padding: 20px;
+  padding: 1.25rem;
 }
 
 @media (max-width: 800px) {
@@ -59,6 +59,6 @@
     padding-bottom: 60px;
   }
   .bicycle-list ul {
-    gap: 20px;
+    gap: 1.25rem;
   }
 }
