creates bicycles page

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 @import "./home/testimony.css";
 
 /*Bicycles*/
+@import "./bicycles/bicycle-list.css";
 @import "./bicycles/bicycles.css";
 
 /*Insurance*/
