--- a/css/utils/components.css
+++ b/css/utils/components.css
@@ -38,6 +38,25 @@
   background: var(--color-9);
 }
 
+.button.arrow{
+  display: flex;
+  align-items: center;
+}
+
+.button.arrow::after{
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 10px;
+  margin-left: 0.75rem;
+  background-image: url('../../img/icons/arrow.svg');
+  transition: 0.2s;
+}
+
+.button.arrow:hover::after{
+  transform: translateX(4px);
+}
+
 @media(max-width:600px){
   .button{
     padding: 0.8rem 1.5rem;
