--- a/css/insurance/insurance.css
+++ b/css/insurance/insurance.css
@@ -11,6 +11,10 @@
   align-items: center;
 }
 
+#insurance .insurance{
+  padding-top: 0px;
+}
+
 .insurance h2{
   grid-column: 1/-1;
   margin-bottom: 2.5rem;
