--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@
 
 /*Insurance*/
 @import "./insurance/insurance.css";
+@import "./insurance/advantages.css";
+@import "./insurance/faq.css";
 
 /*Terms*/
 @import "./terms/terms.css";
