--- a/css/bicycle/insurance.css
+++ b/css/bicycle/insurance.css
@@ -1,12 +1,12 @@
 .bicycle-insurance-bg{
   background-color: var(--color-11);
-  box-shadow: inset 0 120px var(--color-0), inset 0 -120px var(--color-12);
+  box-shadow: inset 0 7.5rem var(--color-0), inset 0 -7.5rem var(--color-12);
 }
 
 .bicycle-insurance{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 40px;
+  gap: 2.5rem;
 }
 
 .bicycle-insurance-image img{
@@ -16,28 +16,28 @@
 }
 
 .bicycle-insurance-content{
-  padding-top: 180px;
-  padding-bottom: 180px;
+  padding-top: 11.25rem;
+  padding-bottom: 11.25rem;
 }
 
 .bicycle-insurance-content h2{
-  margin-bottom: 32px;
+  margin-bottom: 2rem;
 }
 
 .bicycle-insurance-content p{
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 @media(max-width: 800px){
   .bicycle-insurance-bg{
-    box-shadow: inset 0 -60px var(--color-12);
+    box-shadow: inset 0 -3.75rem var(--color-12);
   }
   .bicycle-insurance{
     grid-template-columns: 1fr;
   }
   .bicycle-insurance-content{
     grid-row: 1;
-    padding-top: 40px;
+    padding-top: 2.5rem;
     padding-bottom: 0px;
   }
 }
