--- a/css/contact/contact.css
+++ b/css/contact/contact.css
@@ -1,3 +1,7 @@
+#contact{
+  background-color: var(--color-1);
+}
+
 .contact-bg {
   background: linear-gradient(var(--color-11) 600px, var(--color-1) 0);
 }
