--- a/css/budget/budget.css
+++ b/css/budget/budget.css
@@ -33,7 +33,7 @@
 
 .budget-product {
   border-radius: 5px 0 0 5px;
-  background: var(--color-12);
+  background: var(--color-12) url('../../img/dec/bottom-left.svg') no-repeat bottom 1.25rem left 1.25rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1.25rem;
@@ -177,6 +177,7 @@
   }
   .budget-product{
     border-radius: 5px 5px 0 0;
+    background: var(--color-12);
   }
   .budget-data{
     border-radius: 0 0 5px 5px;
