--- a/css/home/intro.css
+++ b/css/home/intro.css
@@ -1,5 +1,5 @@
 .intro-bg{
-  background-color: var(--color-12);
+  background: var(--color-12) url('../../img/dec/bottom-left.svg') no-repeat bottom 8.75rem left 1.25rem;
   box-shadow: inset 0 -7.5rem var(--color-0);
 }
 
