--- a/css/home/technology.css
+++ b/css/home/technology.css
@@ -1,5 +1,5 @@
 .technology-bg{
-  background-color: var(--color-11);
+  background: var(--color-11) url('../../img/dec/bottom-left.svg') no-repeat bottom 6.25rem left 1.25rem;
   box-shadow: inset 0 5rem var(--color-0), inset 0 -5rem var(--color-0);
 }
 
@@ -49,6 +49,7 @@
 
 @media(max-width: 800px){
   .technology-bg{
+    background: var(--color-11);
     box-shadow: initial;
   }
   .technology{
