image performance optimizations

--- a/css/bicycle/bicycle.css
+++ b/css/bicycle/bicycle.css
@@ -2,8 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2.5rem;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 3.75rem;
+  padding-bottom: 3.75rem;
   align-items: start;
 }
 
